crates/aranya-policy-compiler/tests/data/persistence/ephemeral_publishes_persistent_invalid_type.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid type: persistent command
   |
10 |     publish Cmd {}
   |             ^^^^^^ expected `ephemeral command` but found `persistent command`
